--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"publishConfig": {
 		"access": "restricted"
 	},
-	"version": "1.0.44",
+	"version": "1.0.45",
 	"license": "GPL-3.0-or-later",
 	"name": "@clevercanyon/utilities.php",
 	"description": "Utilities for apps running in a PHP environment.",
@@ -39,12 +39,15 @@
 		}
 	},
 	"dependencies": {},
-	"peerDependencies": {},
+	"peerDependencies": {
+		"@clevercanyon/utilities": "^1.0.111",
+		"@clevercanyon/utilities.node": "^1.0.63"
+	},
 	"peerDependenciesMeta": {},
 	"optionalDependencies": {},
 	"bundleDependencies": [],
 	"devDependencies": {
-		"@clevercanyon/skeleton-dev-deps": "^1.0.132"
+		"@clevercanyon/skeleton-dev-deps": "^1.0.133"
 	},
 	"overrides": {},
 	"cpu": ["x64", "arm64"],
