--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"publishConfig": {
 		"access": "restricted"
 	},
-	"version": "1.0.56",
+	"version": "1.0.57",
 	"license": "GPL-3.0-or-later",
 	"name": "@clevercanyon/utilities.php",
 	"description": "Utilities for apps running in a PHP environment.",
@@ -40,14 +40,14 @@
 	},
 	"dependencies": {},
 	"peerDependencies": {
-		"@clevercanyon/utilities": "^1.0.168",
-		"@clevercanyon/utilities.node": "^1.0.76"
+		"@clevercanyon/utilities": "^1.0.198",
+		"@clevercanyon/utilities.node": "^1.0.78"
 	},
 	"peerDependenciesMeta": {},
 	"optionalDependencies": {},
 	"bundleDependencies": [],
 	"devDependencies": {
-		"@clevercanyon/skeleton-dev-deps": "^1.0.162"
+		"@clevercanyon/skeleton-dev-deps": "^1.0.164"
 	},
 	"overrides": {},
 	"cpu": ["x64", "arm64"],
@@ -63,7 +63,7 @@
 					"lock": []
 				},
 				"build": {
-					"appType": "cma",
+					"appType": "lib",
 					"targetEnv": "node",
 					"entryFiles": []
 				},
