Project update. [p][robotic]

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"publishConfig": {
 		"access": "restricted"
 	},
-	"version": "1.0.57",
+	"version": "1.0.58",
 	"license": "GPL-3.0-or-later",
 	"name": "@clevercanyon/utilities.php",
 	"description": "Utilities for apps running in a PHP environment.",
@@ -40,14 +40,14 @@
 	},
 	"dependencies": {},
 	"peerDependencies": {
-		"@clevercanyon/utilities": "^1.0.198",
+		"@clevercanyon/utilities": "^1.0.199",
 		"@clevercanyon/utilities.node": "^1.0.78"
 	},
 	"peerDependenciesMeta": {},
 	"optionalDependencies": {},
 	"bundleDependencies": [],
 	"devDependencies": {
-		"@clevercanyon/skeleton-dev-deps": "^1.0.164"
+		"@clevercanyon/dev-deps": "^1.0.167"
 	},
 	"overrides": {},
 	"cpu": ["x64", "arm64"],
