Project update. [p][robotic]

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"private": false,
 	"publishConfig": {
-		"access": "restricted"
+		"access": "public"
 	},
-	"version": "1.0.58",
+	"version": "1.0.59",
 	"license": "GPL-3.0-or-later",
 	"name": "@clevercanyon/utilities.php",
 	"description": "Utilities for apps running in a PHP environment.",
@@ -40,14 +40,14 @@
 	},
 	"dependencies": {},
 	"peerDependencies": {
-		"@clevercanyon/utilities": "^1.0.199",
-		"@clevercanyon/utilities.node": "^1.0.78"
+		"@clevercanyon/utilities": "^1.0.200",
+		"@clevercanyon/utilities.node": "^1.0.79"
 	},
 	"peerDependenciesMeta": {},
 	"optionalDependencies": {},
 	"bundleDependencies": [],
 	"devDependencies": {
-		"@clevercanyon/dev-deps": "^1.0.167"
+		"@clevercanyon/dev-deps": "^1.0.169"
 	},
 	"overrides": {},
 	"cpu": ["x64", "arm64"],
