--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Wed, Sep 20, 2023, 11:27:41 PM EDT.
+ * Last generated using `./tsconfig.mjs` Thu, Sep 21, 2023, 3:31:39 AM EDT.
  */
 {
     "include": ["./*.d.ts", "./src/**/*"],
