--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "publishConfig": {
         "access": "public"
     },
-    "version": "1.0.76",
+    "version": "1.0.77",
     "license": "GPL-3.0-or-later",
     "name": "@clevercanyon/utilities.php",
     "description": "Utilities for apps running in a PHP environment.",
@@ -22,14 +22,14 @@
     "imports": {},
     "exports": {
         ".": {
+            "types": "./dist/types/index.d.ts",
             "import": "./dist/index.js",
-            "require": "./dist/index.cjs",
-            "types": "./dist/types/index.d.ts"
+            "default": "./dist/index.js"
         }
     },
     "sideEffects": ["./src/resources/init-env.ts", "./src/index.ts"],
     "module": "./dist/index.js",
-    "main": "./dist/index.cjs",
+    "main": "./dist/index.js",
     "browser": "",
     "unpkg": "./dist/index.js",
     "types": "./dist/types/index.d.ts",
@@ -40,14 +40,14 @@
     },
     "dependencies": {},
     "peerDependencies": {
-        "@clevercanyon/utilities": "^1.0.265",
-        "@clevercanyon/utilities.node": "^1.0.105"
+        "@clevercanyon/utilities": "^1.0.266",
+        "@clevercanyon/utilities.node": "^1.0.106"
     },
     "peerDependenciesMeta": {},
     "optionalDependencies": {},
     "bundleDependencies": [],
     "devDependencies": {
-        "@clevercanyon/dev-deps": "^1.0.229"
+        "@clevercanyon/dev-deps": "^1.0.230"
     },
     "overrides": {},
     "cpu": ["x64", "arm64"],
