Project update. [p][robotic]

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "publishConfig": {
         "access": "public"
     },
-    "version": "1.0.77",
+    "version": "1.0.78",
     "license": "GPL-3.0-or-later",
     "name": "@clevercanyon/utilities.php",
     "description": "Utilities for apps running in a PHP environment.",
@@ -27,7 +27,7 @@
             "default": "./dist/index.js"
         }
     },
-    "sideEffects": ["./src/resources/init-env.ts", "./src/index.ts"],
+    "sideEffects": ["**/*.{css,scss,less}", "./src/resources/init-env.ts"],
     "module": "./dist/index.js",
     "main": "./dist/index.js",
     "browser": "",
@@ -40,21 +40,21 @@
     },
     "dependencies": {},
     "peerDependencies": {
-        "@clevercanyon/utilities": "^1.0.266",
-        "@clevercanyon/utilities.node": "^1.0.106"
+        "@clevercanyon/utilities": "^1.0.279",
+        "@clevercanyon/utilities.node": "^1.0.109"
     },
     "peerDependenciesMeta": {},
     "optionalDependencies": {},
     "bundleDependencies": [],
     "devDependencies": {
-        "@clevercanyon/dev-deps": "^1.0.230"
+        "@clevercanyon/dev-deps": "^1.0.232"
     },
     "overrides": {},
     "cpu": ["x64", "arm64"],
     "os": ["darwin", "linux"],
     "engines": {
-        "node": "^19.1.0 || ^20.5.1",
-        "npm": "^8.19.3 || ^9.2.0"
+        "node": "^19.1.0 || ^20.5.0",
+        "npm": "^8.19.3 || ^9.8.0 || ^10.0.0"
     },
     "config": {
         "c10n": {
@@ -65,12 +65,14 @@
                 "build": {
                     "appType": "lib",
                     "targetEnv": "node",
-                    "entryFiles": []
+                    "entryFiles": [],
+                    "sideEffects": []
                 },
                 "ssrBuild": {
                     "appType": "",
                     "targetEnv": "",
-                    "entryFiles": []
+                    "entryFiles": [],
+                    "sideEffects": []
                 },
                 "github": {
                     "teams": {
