--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Thu, Sep 21, 2023, 6:09:51 AM EDT.
+# Last generated Wed, Sep 27, 2023, 7:00:07 PM EDT.
 
 # Locals
 
