--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Fri, Sep 29, 2023, 7:09:51 PM EDT.
+# Last generated Sat, Sep 30, 2023, 9:36:35 AM EDT.
 
 # Locals
 
