--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,15 +7,15 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Fri, Sep 29, 2023, 7:09:52 PM EDT.
+# Last generated using `./wrangler.mjs` Sat, Sep 30, 2023, 9:36:36 AM EDT.
 ##
 
 send_metrics = false
 usage_model = "bundled"
 compatibility_date = "2023-08-15"
 compatibility_flags = [ ]
-name = "utilities-php"
 account_id = "f1176464a976947aa5665d989814a4b1"
+name = "utilities-php"
 workers_dev = false
 main = "./dist/index.js"
 
