--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Sat, Sep 30, 2023, 9:36:36 AM EDT.
+# Last generated using `./wrangler.mjs` Sat, Sep 30, 2023, 1:00:44 PM EDT.
 ##
 
 send_metrics = false
