Project update. [p][robotic]

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "publishConfig": {
         "access": "public"
     },
-    "version": "1.0.83",
+    "version": "1.0.84",
     "license": "GPL-3.0-or-later",
     "name": "@clevercanyon/utilities.php",
     "description": "Utilities for apps running in a PHP environment.",
@@ -27,7 +27,7 @@
             "default": "./dist/index.js"
         }
     },
-    "sideEffects": ["**/*.{css,scss,less}", "./src/resources/init-env.ts"],
+    "sideEffects": ["**/*.{css,scss,less}", "./src/resources/init.ts"],
     "module": "./dist/index.js",
     "main": "./dist/index.js",
     "browser": "",
@@ -40,14 +40,14 @@
     },
     "dependencies": {},
     "peerDependencies": {
-        "@clevercanyon/utilities": "^1.0.295",
-        "@clevercanyon/utilities.node": "^1.0.115"
+        "@clevercanyon/utilities": "^1.0.322",
+        "@clevercanyon/utilities.node": "^1.0.121"
     },
     "peerDependenciesMeta": {},
     "optionalDependencies": {},
     "bundleDependencies": [],
     "devDependencies": {
-        "@clevercanyon/dev-deps": "^1.0.243"
+        "@clevercanyon/dev-deps": "^1.0.246"
     },
     "overrides": {},
     "cpu": ["x64", "arm64"],
