--- a/.gitattributes
+++ b/.gitattributes
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Wed, Oct 4, 2023, 8:02:40 PM EDT.
+# Last generated Mon, Oct 9, 2023, 8:37:02 AM EDT.
 
 # Default
 
