--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Wed, Oct 4, 2023, 8:02:40 PM EDT.
+ * Last generated using `./tsconfig.mjs` Mon, Oct 9, 2023, 8:37:03 AM EDT.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
