--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mon, Oct 9, 2023, 9:04:04 AM EDT.
+# Last generated Mon, Oct 9, 2023, 5:49:14 PM EDT.
 
 [production]
 last 1 chrome versions
