--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mon, Oct 9, 2023, 9:04:04 AM EDT.
+# Last generated Mon, Oct 9, 2023, 5:49:13 PM EDT.
 
 # Locals
 
