--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mon, Oct 9, 2023, 10:00:49 PM EDT.
+# Last generated Thu, Oct 19, 2023, 10:40:15 AM EDT.
 
 # Locals
 
