Project update. [p][robotic]

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "publishConfig": {
         "access": "public"
     },
-    "version": "1.0.89",
+    "version": "1.0.90",
     "license": "GPL-3.0-or-later",
     "name": "@clevercanyon/utilities.php",
     "description": "Utilities for apps running in a PHP environment.",
@@ -40,21 +40,23 @@
     },
     "dependencies": {},
     "peerDependencies": {
-        "@clevercanyon/utilities": "^1.0.351",
-        "@clevercanyon/utilities.node": "^1.0.126"
+        "@clevercanyon/utilities": "^1.0.440",
+        "@clevercanyon/utilities.node": "^1.0.126",
+        "react": "npm:@preact/compat@^17.1.2",
+        "react-dom": "npm:@preact/compat@^17.1.2"
     },
     "peerDependenciesMeta": {},
     "optionalDependencies": {},
     "bundleDependencies": [],
     "devDependencies": {
-        "@clevercanyon/dev-deps": "^1.0.254"
+        "@clevercanyon/dev-deps": "^1.0.263"
     },
     "overrides": {},
     "cpu": ["x64", "arm64"],
     "os": ["darwin", "linux"],
     "engines": {
-        "node": "^19.1.0 || ^20.5.0",
-        "npm": "^8.19.3 || ^9.8.0 || ^10.0.0"
+        "node": "^20.5.0 || ^20.9.0",
+        "npm": "^9.8.0 || ^10.1.0"
     },
     "config": {
         "c10n": {
