Project update. [p][robotic]

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "publishConfig": {
         "access": "public"
     },
-    "version": "1.0.90",
+    "version": "1.0.91",
     "license": "GPL-3.0-or-later",
     "name": "@clevercanyon/utilities.php",
     "description": "Utilities for apps running in a PHP environment.",
@@ -19,7 +19,11 @@
     "contributors": [],
     "type": "module",
     "bin": {},
-    "imports": {},
+    "imports": {
+        "#^*": "./*",
+        "#@*": "./src/resources/*",
+        "#*": "./src/*"
+    },
     "exports": {
         ".": {
             "types": "./dist/types/index.d.ts",
@@ -40,16 +44,14 @@
     },
     "dependencies": {},
     "peerDependencies": {
-        "@clevercanyon/utilities": "^1.0.440",
-        "@clevercanyon/utilities.node": "^1.0.126",
-        "react": "npm:@preact/compat@^17.1.2",
-        "react-dom": "npm:@preact/compat@^17.1.2"
+        "@clevercanyon/utilities": "^1.0.494",
+        "@clevercanyon/utilities.node": "^1.0.129"
     },
     "peerDependenciesMeta": {},
     "optionalDependencies": {},
     "bundleDependencies": [],
     "devDependencies": {
-        "@clevercanyon/dev-deps": "^1.0.263"
+        "@clevercanyon/dev-deps": "^1.0.281"
     },
     "overrides": {},
     "cpu": ["x64", "arm64"],
