--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Dec 3, 2023 10:56 AM UTC.
+# Last generated Dec 12, 2023 2:04 AM UTC.
 
 # Locals
 
@@ -219,6 +219,7 @@ dist
 # npm:Dots
 
 .*
+!.well-known
 
 # npm:Configs
 
