--- a/.gitattributes
+++ b/.gitattributes
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Dec 13, 2023 5:28 AM UTC.
+# Last generated Dec 13, 2023 10:28 PM UTC.
 
 # Default
 
