--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Dec 14, 2023 9:21 PM UTC.
+# Last generated Dec 15, 2023 6:15 AM UTC.
 
 [production]
 node >= 20.9.0
