--- a/.prettierignore
+++ b/.prettierignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Dec 18, 2023 9:41 AM UTC.
+# Last generated Dec 24, 2023 5:12 PM UTC.
 
 # Packages
 
