--- a/.prettierignore
+++ b/.prettierignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Dec 24, 2023 5:12 PM UTC.
+# Last generated Jan 3, 2024 12:38 AM UTC.
 
 # Packages
 
