--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Jan 3, 2024 1:50 AM UTC.
+# Last generated Jan 3, 2024 7:55 PM UTC.
 
 # Locals
 
