--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Jan 3, 2024 1:50 AM UTC.
+# Last generated using `./wrangler.mjs` Jan 3, 2024 7:55 PM UTC.
 ##
 
 send_metrics = false
