--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Jan 3, 2024 7:55 PM UTC.
+# Last generated Jan 5, 2024 1:15 AM UTC.
 
 [production]
 node >= 20.9.0
