--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Jan 3, 2024 7:55 PM UTC.
+# Last generated Jan 5, 2024 1:15 AM UTC.
 
 # Locals
 
