--- a/.gitattributes
+++ b/.gitattributes
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Jan 9, 2024 12:49 AM UTC.
+# Last generated Jan 9, 2024 9:22 PM UTC.
 
 # Default
 
