--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Jan 22, 2024 9:36 PM UTC.
+ * Last generated using `./settings.mjs` Jan 23, 2024 3:37 AM UTC.
  */
 {
     "editor.formatOnType": false,
