--- a/.vscodeignore
+++ b/.vscodeignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Jan 24, 2024 10:38 PM UTC.
+# Last generated Jan 27, 2024 3:39 AM UTC.
 
 # Locals
 
