--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Feb 15, 2024 7:42 AM UTC.
+# Last generated using `./wrangler.mjs` Feb 16, 2024 11:16 PM UTC.
 ##
 
 send_metrics = false
