--- a/.vscodeignore
+++ b/.vscodeignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Feb 15, 2024 7:42 AM UTC.
+# Last generated Feb 16, 2024 11:16 PM UTC.
 
 # Locals
 
