--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "publishConfig": {
         "access": "public"
     },
-    "version": "1.0.146",
+    "version": "1.0.147",
     "license": "GPL-3.0-or-later",
     "name": "@clevercanyon/utilities.php",
     "description": "Utilities for apps running in a PHP environment.",
@@ -44,21 +44,21 @@
     },
     "dependencies": {},
     "peerDependencies": {
-        "@clevercanyon/utilities": "^1.0.861",
-        "@clevercanyon/utilities.node": "^1.0.190"
+        "@clevercanyon/utilities": "^1.0.862",
+        "@clevercanyon/utilities.node": "^1.0.191"
     },
     "peerDependenciesMeta": {},
     "optionalDependencies": {},
     "bundleDependencies": [],
     "devDependencies": {
-        "@clevercanyon/dev-deps": "^1.0.360"
+        "@clevercanyon/dev-deps": "^1.0.361"
     },
     "overrides": {},
     "cpu": ["x64", "arm64"],
     "os": ["darwin", "linux"],
     "engines": {
-        "node": "^20.5.0 || ^20.9.0",
-        "npm": "^9.8.0 || ^10.1.0"
+        "node": "^20.5.0 || ^20.9.0 || ^21.6.2",
+        "npm": "^9.8.0 || ^10.1.0 || ^10.2.4"
     },
     "config": {
         "c10n": {
