--- a/.prettierignore
+++ b/.prettierignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Feb 27, 2024 8:20 AM UTC.
+# Last generated Mar 1, 2024 3:02 PM UTC.
 
 # Packages
 
