--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Feb 27, 2024 8:20 AM UTC.
+ * Last generated using `./settings.mjs` Mar 1, 2024 3:02 PM UTC.
  */
 {
     "editor.formatOnType": false,
