--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 22, 2024 8:44 AM UTC.
+# Last generated Mar 22, 2024 8:33 PM UTC.
 
 [production]
 node >= 20.9.0
