Project update. [p][robotic]

--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Apr 8, 2024 2:25 PM UTC.
+# Last generated Apr 11, 2024 1:07 AM UTC.
 
 # Locals
 
