--- a/.gitattributes
+++ b/.gitattributes
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated May 4, 2024 7:07 AM UTC.
+# Last generated Mar 6, 2025 4:30 PM UTC.
 
 # Default
 
