--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` May 4, 2024 7:07 AM UTC.
+ * Last generated using `./settings.mjs` Mar 6, 2025 4:30 PM UTC.
  */
 {
     "editor.formatOnType": false,
