--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` May 4, 2024 7:07 AM UTC.
+ * Last generated using `./tsconfig.mjs` Mar 6, 2025 4:30 PM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
@@ -110,8 +110,8 @@
         "lib": ["es2022"],
         "types": [
             "vite/client",
-            "@types/mdx",
             "unplugin-icons/types/preact",
+            "@types/mdx",
             "dayjs/plugin/advancedFormat",
             "dayjs/plugin/customParseFormat",
             "dayjs/plugin/localizedFormat",
