--- a/.prettierignore
+++ b/.prettierignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 6, 2025 4:30 PM UTC.
+# Last generated Mar 13, 2025 5:57 AM UTC.
 
 # Packages
 
