--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Mar 13, 2025 5:57 AM UTC.
+# Last generated Mar 13, 2025 8:54 PM UTC.
 
 [production]
 node >= 20.9.0
